[package]
name = "npr"
version = "0.1.0"
edition = "2024"
description = "Noise Protocol framework implementation in Rust"

[lib]
name = "npr"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
hex = "0.4.3"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tun = "0.8.6"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
