[package]
name = "npr"
version = "0.1.0"
edition = "2024"
description = "Noise Protocol framework implementation in Rust"

[lib]
name = "npr"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
hex = "0.4.3"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tun = { version = "0.8.6", features = ["async"] }
aead = "0.5"
blake2 = "0.10"
chacha20poly1305 = "0.10"
tai64 = "4"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
anyhow = "1.0.102"
